force-app/main/default/objects/custom_create77__c/custom_create77__c.object-meta.xml
<CustomObject>
    <label>Custom created object77</label>
    <nameField>
        <label>Custom created field</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Custom created objects77</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>