force-app/main/default/objects/custom_create77__c/fields/custom_create_77field508__c.field-meta.xml
<CustomField>
    <fullName>custom_create_77field508__c</fullName>
    <defaultValue>true</defaultValue>
    <label>Custom created 77field508</label>
    <type>Checkbox</type>
</CustomField>